--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ annotated-types==0.7.0
 anyio==4.10.0
 attrs==25.3.0
 bcrypt==4.3.0
+cachetools==5.5.2
 certifi==2025.8.3
 charset-normalizer==3.4.3
 click==8.2.1
@@ -15,9 +16,13 @@ ecdsa==0.19.1
 faiss-cpu==1.12.0
 fastapi==0.116.1
 frozenlist==1.7.0
+google-auth==2.40.3
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.2
 greenlet==3.2.4
 h11==0.16.0
 httpcore==1.0.9
+httplib2==0.31.0
 httpx==0.28.1
 httpx-sse==0.4.1
 idna==3.10
@@ -35,23 +40,28 @@ motor==3.7.1
 multidict==6.6.4
 mypy_extensions==1.1.0
 numpy==1.26.4
+oauthlib==3.3.1
 openai==1.107.1
 orjson==3.11.3
 packaging==24.2
 passlib==1.7.4
 propcache==0.3.2
 pyasn1==0.6.1
+pyasn1_modules==0.4.2
 pydantic==2.11.7
 pydantic-settings==2.10.1
 pydantic_core==2.33.2
 PyJWT==2.10.1
 pymongo==4.15.0
+pyparsing==3.2.4
 PyPDF2==3.0.1
 python-dotenv==1.1.1
 python-jose==3.5.0
+python-multipart==0.0.20
 PyYAML==6.0.2
 regex==2025.9.1
 requests==2.32.5
+requests-oauthlib==2.0.0
 requests-toolbelt==1.0.0
 rsa==4.9.1
 six==1.17.0
